[gd_scene load_steps=3 format=3 uid="uid://db1ujd1clhbbk"]

[ext_resource type="Script" path="res://scenes/shared/entity/entity.gd" id="1_1ei00"]
[ext_resource type="PackedScene" uid="uid://cfxlh8jtfdifr" path="res://scenes/shared/hurthitbox/hurt_box.tscn" id="3_7rbmc"]

[node name="entity" type="CharacterBody2D"]
scale = Vector2(0.999999, 0.999999)
collision_mask = 16
velocity = Vector2(0, 2.08935e+06)
script = ExtResource("1_1ei00")

[node name="CharacterSprite" type="Sprite2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Hurt_Box" parent="." instance=ExtResource("3_7rbmc")]

[connection signal="area_entered" from="Hurt_Box" to="." method="_on_hurt_box_area_entered"]
